--- a/css/snake.css
+++ b/css/snake.css
@@ -1,14 +1,8 @@
-body {
-    margin: 0px;
-}
 
 #sn_main {
-    margin-left: 100px;
-    width: 300px;
-    height: 300px;
-    margin-top: 100px;
     border: none;
     background-color: #dedede;
+    position:relative;
 }
 
 .sn_point {
@@ -34,7 +28,5 @@ body {
 
 #sn_info {
     float: left;
-    margin-top: -35px;
     font-size: 30px;
-    width:300px;
 }
