--- a/css/snake.css
+++ b/css/snake.css
@@ -33,7 +33,11 @@
 }
 
 #sn_options {
-    font-size: 20px;
+    font-size: 18px;
     position: fixed;
     width: 100%;
+}
+
+.sn_input {
+    width: 60px;
 }
